<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.teamblue_rollinggame.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameTitle"
        android:text="@string/app_name"
        android:textSize="16pt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_marginTop="50sp"
        android:id="@+id/startGame_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameTitle"
        android:layout_marginLeft="120sp"
        android:layout_centerHorizontal="true"
        android:text="@string/start"
        android:onClick="gameSelect"/>
    <Button
        android:id="@+id/hiscore_Button"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/startGame_Button"
        android:layout_marginLeft="120sp"
        android:text="@string/hiscore"
        android:onClick="hiscoreSelect"/>
    <Button
        android:id="@+id/options_Button"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/hiscore_Button"
        android:layout_marginLeft="120sp"
        android:text="@string/options"
        android:onClick="optionSelect"/>
    <Button
        android:id="@+id/exit_Button"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/options_Button"
        android:layout_marginLeft="120sp"
        android:text="@string/exit"
        android:onClick="exit"/>
</RelativeLayout>
